募集要項を作成しました。

--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -40,3 +40,30 @@
     border-radius: 20px;
     padding: 0.5em 0;
 }
+
+/*----------------------------
+      Media / メディア
+----------------------------*/
+.slider{
+    width:70%;
+    margin:0 auto;
+}
+.slider img{
+    width:100%;
+}
+.slider .slick-slide{
+    height:auto!important;
+}
+.slider .slick-arrow{
+    z-index:2!important;
+}
+.slider .slick-next{
+    right:0!important;
+}
+.slider .slick-prev{
+    left:0!important;
+}
+.slick-slide{
+    margin-right: 1vw!important;
+    margin-left: 1vw!important;
+}
