--- a/src/assets/css/interview.css
+++ b/src/assets/css/interview.css
@@ -2,6 +2,12 @@
     /* display: grid; */
     /* grid-template-columns: 1fr 1100px 1fr; */
     background-color: #EBF5FF;
+    padding: 130px 0 140px;
+}
+
+.interview_wrap{
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 .schedule_title{
