--- a/src/assets/css/interview.css
+++ b/src/assets/css/interview.css
@@ -16,6 +16,7 @@
 
 .interview_item{
     display: flex;
+    align-items: end;
     column-gap: 60px;
     margin-top: 75px;
 }
@@ -50,6 +51,10 @@
     background-color: #fff;
     border-radius:20px;
     padding: 25px 20px;
+}
+
+.interview_item_text_qa:nth-child(3){
+    margin-top: 15px;
 }
 
 .interview_item_text_qa h4{
