keyvisualを編集しました

--- a/src/assets/css/common/utility.css
+++ b/src/assets/css/common/utility.css
@@ -1,22 +1,60 @@
-.button_common{
-    /*ボタンの形状*/
-    display: inline-block;
-    color:#fff;
-    /* padding: 18px 60px; */
-    /* border-radius:30px; */
-    /* text-decoration: none; */
+/*----------------------------
+    CTA
+    応募ボタン
+----------------------------*/
+/* buttonタグのリセットCSS */
+button.gradient-btn {
     border: none;
-    pointer-events: cursor;
-    /*背景の色と形状*/
-    background: linear-gradient(270deg, #30508D 50%, #092F5A 100%);
-    background-position: 1% 50%;
-    background-size: 200% auto;
-    /*アニメーションの指定*/
-    transition: all 0.3s ease-out;
-}
-
-/*hoverした際の、背景の場所とテキスト色の変更*/
-.button_common:hover {
+    appearance: none;
+    padding: 0;
+  }
+  
+/* ボタン本体の装飾 */
+.gradient-btn {
+    position: relative; /* static以外を指定 */
+    z-index: 0; /* グラデーションよりも上に配置 */
+    display: inline-block; /* inline以外にする */
+    /* width: 200px; 横幅 */
+    /* height: 60px; 縦幅 */
+    /* line-height: 1; 行の高さ(heightと同じにする) */
+    background: transparent; /* 背景を透明にする */
+    /* border-radius: 5px; 角の丸み */
+    overflow: hidden; /* はみ出した部分を非表示(角丸を付ける場合は必須) */
+    cursor: pointer; /* カーソルをポインターにする */
+    /* 以下ボタンのテキスト装飾(自由にカスタマイズしてください) */
     color: #fff;
-    background-position: 99% 50%;
+    /* font-size: 16px; */
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: bold;
+    text-align: center;
+  }
+  
+/* ::before, ::afterで2種類のグラデーションを用意 */
+.gradient-btn::before,
+.gradient-btn::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  
+/* グラデーション1 */
+.gradient-btn::before {
+    transition: all 0.6s; /* アニメーション実行時間 */
+    z-index: -1;
+    background: linear-gradient(90deg, #30508D 0%, #092F5A 100%);
+}
+  
+/* グラデーション2 */
+.gradient-btn::after {
+    z-index: -2;
+    background: linear-gradient(90deg, #092F5A 0%, #30508D 100%);
+}
+  
+/* ホバー時にグラデーション1を透明にする */
+.gradient-btn:hover::before {
+    opacity: 0;
 }
