--- a/src/assets/css/precedent.css
+++ b/src/assets/css/precedent.css
@@ -5,15 +5,16 @@
     /* background-position: top 20px right 0; */
     /* background-size: 245px; */
 
-    position: relative;
+    /* position: relative; */
     /* border: 1px solid black; */
     /* min-height: 100vh; */
     display: grid;
+    grid-template-columns: 1fr 1100px 1fr;
     place-content: center;
-    padding: 245px 0;
+    padding-top: 150px;
 }
 
-.precedent_content{
+.precedent_middle{
     /* position: absolute;
     top: 50%;
     left: 50%;
@@ -21,23 +22,38 @@
     border: solid 1px #ff0000; */
     position: relative;
     z-index: 3;
-    max-width: 1100px;
+    /* max-width: 1100px; */
+    padding-bottom: 115px;
 }
 
-.precedent_content:after {
-    width: 64vw;
-    height: 77.3vh;
-    top: 0;
-    left: 0;
-}
-
-.precedent_content:after {
+.precedent_middle:before {
+    width: 91%;
+    height: 93%;
+    bottom: 0;
+    right: 0;
     content: "";
     display: block;
     position: absolute;
     z-index: -1;
     background-color: #EBF5FF;
     border-radius: 50px 0 0 50px;
+}
+
+.precedent_right{
+    position: relative;
+    z-index: 3;
+}
+
+.precedent_right:before{
+    width: 100%;
+    height: 93%;
+    bottom: 0;
+    right: 0;
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    background-color: #EBF5FF;
 }
 
 .precedent_top{
