--- a/src/assets/css/interview.css
+++ b/src/assets/css/interview.css
@@ -1,17 +1,29 @@
 #interview{
-    /* display: grid; */
-    /* grid-template-columns: 1fr 1100px 1fr; */
+    display: grid;
+    grid-template-columns: 1fr 1100px 1fr;
+    position: relative;
+}
+
+.interview_left{
     background-color: #EBF5FF;
+}
+
+.interview_middle{
     padding: 130px 0 140px;
+    position: relative;
 }
 
-.interview_wrap{
-    max-width: 1100px;
-    margin: 0 auto;
-}
-
-.schedule_title{
-    /* grid-column: 2 / 3; */
+.interview_middle:before {
+    width: 91%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    background-color: #EBF5FF;
+    border-radius: 0 50px 50px 0;
 }
 
 .interview_item{
@@ -67,4 +79,28 @@
     font-size: 16px;
     line-height: 1.75;
     margin-top: 20px;
+}
+
+/*---------------------------------
+    Backgroung / 背景イラスト
+----------------------------------*/
+.interview_bg{
+    width: 245px;
+    position: absolute;
+    top: -185px;
+    right: 0;
+    z-index: 10;
+}
+
+/*---------------------------------
+    Tablet / タブレット
+----------------------------------*/
+@media screen and (max-width:1100px){
+    #interview{
+        grid-template-columns: 1fr 90% 1fr;
+    }
+
+    .interview_item img{
+        height: 100%;
+    }
 }
