--- a/src/assets/css/area.css
+++ b/src/assets/css/area.css
@@ -36,3 +36,27 @@
     line-height: 28px;
     margin-top: 20px;
 }
+
+/*---------------------------------
+    Tablet / タブレット
+----------------------------------*/
+@media screen and (max-width:1100px){
+    #area{
+        padding: 130px 50px 150px;
+    }
+
+    .area_wrap img{
+        width: 60%;
+        top: initial;
+        bottom: 0;
+    }
+
+    .area_content{
+        margin-top: 30px;
+        padding-bottom: 0;
+    }
+
+    .area_content .bg_gradient{
+        font-size: 24px;
+    }
+}
