--- a/src/assets/css/keyvisual.css
+++ b/src/assets/css/keyvisual.css
@@ -8,7 +8,7 @@
     /* display: flex; */
     /* align-items: bottom; */
     position: relative;
-    padding: 9% 0 6%;
+    padding: 8% 0 6%;
 }
 
 .keyvisual_content{
@@ -35,7 +35,19 @@
     font-size: 1.98vw;
     transform: skewX(-10deg);
     /* padding-bottom: 10px; */
-    border-bottom: solid 2px #fff;
+    /* border-bottom: solid 2px #fff; */
+    position: relative;
+}
+
+.keyvisual_left .keyvisual_copy::after{
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 1%;
+    background-color: #fff;
 }
 
 .keyvisual_left .ten-million{
@@ -105,6 +117,7 @@
     width: 100%;
     border-radius: 35px;    
     font-size: 25px;
+    font-size: min(1.65vw, 25px);
     line-height: 70px;
     letter-spacing: 0.11rem;
     position: relative;
