--- a/src/assets/css/point.css
+++ b/src/assets/css/point.css
@@ -29,6 +29,7 @@
 .point_item img{
     width: 51%;
     border-radius: 20px;
+    object-fit: cover;
 }
 
 .point_item_text{
@@ -59,4 +60,22 @@
     font-size: 16px;
     line-height: 1.75;
     text-align: justify;
+}
+
+/*---------------------------------
+    Tablet / タブレット
+----------------------------------*/
+@media screen and (max-width:1100px){
+    .point_content{
+        max-width: 100%;
+        padding: 0 50px;
+    }
+
+    .point_item{
+        column-gap: 50px;
+    }
+
+    .point_item h3{
+        font-size: 24px;
+    }
 }
