--- a/src/assets/css/recruit.css
+++ b/src/assets/css/recruit.css
@@ -47,3 +47,12 @@
     border-radius: 5px;
     display: inline-block;
 }
+
+/*---------------------------------
+    Tablet / タブレット
+----------------------------------*/
+@media screen and (max-width:1100px){
+    .recruit_content{
+        padding: 0 50px;
+    }
+}
