--- a/src/assets/css/keyvisual.css
+++ b/src/assets/css/keyvisual.css
@@ -37,6 +37,7 @@
     /* padding-bottom: 10px; */
     /* border-bottom: solid 2px #fff; */
     position: relative;
+    padding-left: 0.3em;
 }
 
 .keyvisual_left .keyvisual_copy::after{
