--- a/src/assets/css/schedule.css
+++ b/src/assets/css/schedule.css
@@ -2,6 +2,10 @@
     background-color: #fff;
     padding: 170px 0;
     position: relative;
+    background-image: url(../images/common/slash_03.svg);
+    background-repeat: no-repeat;
+    background-position: top 180px left 0;
+    background-size: 288px;
 }
 
 .schedule_title{
@@ -10,6 +14,7 @@
 
 .schedule_content{
     text-align: center;
+    z-index: 1;
 }
 
 .schedule_content h3{
@@ -20,7 +25,7 @@
     letter-spacing: 0.06rem;
     border-radius: 20px;
     margin-top: 70px;
-    padding: 0.5em 0;
+    padding: 0.4em 0 0.6em;
 }
 
 .schedule_content iframe{
