--- a/src/assets/css/entry.css
+++ b/src/assets/css/entry.css
@@ -1,6 +1,6 @@
 #entry{
     background: linear-gradient(to bottom, #81B3E6 50%, #467DD2 100%);
-    padding: 120px 0 100px;
+    padding: 120px 8vw 100px;
 }
 
 .entry_title{
