--- a/src/assets/css/point.css
+++ b/src/assets/css/point.css
@@ -1,5 +1,5 @@
 #point{
-    padding: 140px 0;
+    padding: 140px 8vw 150px;
     background-color: #EBF5FF;
     background-image: url(../images/common/slash_01.svg);
     background-repeat: no-repeat;
