--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -62,3 +62,18 @@
     letter-spacing: 0.08rem;
     margin-top: 25px;
 }
+
+/*----------------------------
+      Tablet / タブレット
+----------------------------*/
+@media screen and (max-width:1200px){
+    .about_slick h4{
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width:1100px){
+    .about_slick h4{
+        font-size: 16px;
+    }
+}
