--- a/src/assets/css/interview.css
+++ b/src/assets/css/interview.css
@@ -62,7 +62,7 @@
     margin-top: 25px;
     background-color: #fff;
     border-radius:20px;
-    padding: 25px 30px;
+    padding: 30px 20px;
 }
 
 .interview_item_text_qa:nth-child(3){
@@ -71,7 +71,7 @@
 
 .interview_item_text_qa h4{
     font-size: 20px;
-    line-height: 1;
+    line-height: 1.5;
     letter-spacing: 0.08rem;
 }
 
@@ -95,12 +95,8 @@
 /*---------------------------------
     Tablet / タブレット
 ----------------------------------*/
-@media screen and (max-width:1100px){
+@media screen and (max-width:1300px){
     #interview{
-        grid-template-columns: 1fr 90% 1fr;
-    }
-
-    .interview_item img{
-        height: 100%;
+        grid-template-columns: 8vw 1fr 8vw;
     }
 }
