--- a/src/assets/css/point.css
+++ b/src/assets/css/point.css
@@ -28,6 +28,7 @@
 
 .point_item img{
     width: 51%;
+    height: 100%;
     border-radius: 20px;
     object-fit: cover;
 }
@@ -35,9 +36,9 @@
 .point_item_text{
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: start;
     align-items: start;
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
 }
 
 .point_item span{
@@ -65,7 +66,7 @@
 /*---------------------------------
     Tablet / タブレット
 ----------------------------------*/
-@media screen and (max-width:1100px){
+@media screen and (max-width:1250px){
     .point_content{
         max-width: 100%;
         padding: 0 50px;
@@ -76,6 +77,6 @@
     }
 
     .point_item h3{
-        font-size: 24px;
+        font-size: 22px;
     }
 }
