--- a/main.css
+++ b/main.css
@@ -470,16 +470,31 @@ button.gradient-btn {
     letter-spacing: 0.08rem;
     margin-top: 25px;
 }
+
+/*----------------------------
+      Tablet / タブレット
+----------------------------*/
+@media screen and (max-width:1200px){
+    .about_slick h4{
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width:1100px){
+    .about_slick h4{
+        font-size: 16px;
+    }
+}
 /*!***************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/assets/css/area.css ***!
   \***************************************************************************/
 #area{
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 130px 0 150px;
+    padding: 130px 8vw 150px;
 }
 
 .area_wrap{
+    max-width: 1100px;
+    margin: 0 auto;
     position: relative;
 }
 
@@ -557,7 +572,7 @@ button.gradient-btn {
   \****************************************************************************/
 #entry{
     background: linear-gradient(to bottom, #81B3E6 50%, #467DD2 100%);
-    padding: 120px 0 100px;
+    padding: 120px 8vw 100px;
 }
 
 .entry_title{
@@ -591,16 +606,227 @@ button.gradient-btn {
 /*!***************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/assets/css/flow.css ***!
   \***************************************************************************/
+#flow{
+    /* margin-bottom: 200px; */
+}
+
+.flow_top{
+    /* background-color: #EBF5FF; */
+    display: grid;
+    grid-template-columns: 1fr 1100px 1fr;
+    position: relative;
+}
+
+.flow_top_middle{
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    position: relative;
+    padding: 150px 0 0 100px;
+}
+
+.flow_top_middle::before{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    background-color: #EBF5FF;
+    border-radius: 50px 0 0 0;
+}
+
+.flow_top_right{
+    background-color: #EBF5FF;
+}
+
+.flow_bottom{
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1100px 1f; */
+    position: relative;
+    padding: 75px 0 150px 100px;
+}
+
+/* .flow_bottom::before{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    background-color: #EBF5FF;
+    border-radius: 50px 0 0 50px;
+} */
+
+.insp-slider{
+    /* grid-column: 2/4; */
+}
+
+/*----------------------------
+    Slider Controls
+    スライダーコントロール
+----------------------------*/
+
+.slider-controls {
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
+    gap: 30px;
+  }
+  
+  .indicators {
+    display: flex;
+    align-items: end;
+    gap: 30px;
+    padding: 0;
+    margin: 0;
+  }
+  .indicators:hover {
+    cursor: pointer;
+  }
+  
+  .indicator{
+    letter-spacing: 0.08em;
+  }
+  
+  .slider-buttons {
+    display: flex;
+    gap: 20px;
+  }
+  .slider-btn {
+    background: transparent;
+    border: none;
+    display: grid;
+    place-items: center;
+  }
+  .slider-btn img {
+    object-fit: cover;
+    height: 40px;
+    width: 40px;
+  }
+  
+  .slider-btn:hover {
+    cursor: pointer;
+  }
+  
+  .slider-buttons .next{
+    padding-right: 0;
+  }
+  
+  /*----------------------------
+      Slider
+      スライダー
+  ----------------------------*/
+
+  .card_left{
+    max-width: 41.8%;
+  }
+
+  .card_left img{
+    border-radius: 20px 0 0 20px;
+  }
+
+  .card_right{
+    background: #fff;
+    padding: 50px;
+  }
+
+  .card_right_step{
+    display: flex;
+    align-items: end;
+    column-gap: 20px;
+  }
+
+  .card_right span{
+    font-size: 25px;
+    line-height: 1;
+    letter-spacing: 0.06rem;
+  }
+
+  .card_right .step_number{
+    font-size: 40px;
+  }
+
+  .card_right h3{
+    font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.08rem;
+    margin-bottom: 5px;
+  }
+
+  .card_right p{
+    font-size: 16px;
+    line-height: 1.75;
+    margin-top: 20px;
+  }
+
+  .card_right .card_right_navy{
+    background-color: #292F4A;
+    padding: 0 1.5em 0.1em;
+    font-size: 16px;
+    line-height: 1;
+    letter-spacing: 0.08rem;
+    display: inline-block;
+    border-radius: 5px;
+    margin-top: 20px;
+  }
+  .card_right .card_right_navy p{
+    margin-top: 0;
+  }
+
+  .slide_item {
+    width: 50%;
+    position: relative;
+  }
+  
+  .card-inner {
+    display: flex;
+    flex-direction: row;
+    /* gap: 2px; */
+  }
+  
+  /* .slide_item p {
+    position: absolute;
+    width: 180px;
+    height: 40px;
+    top: 0px;
+    left: 0;
+    z-index: 3;
+    background-color: #ffffff;
+    clip-path: polygon(0 0, 100% 0, 74% 100%, 0 100%);
+    display: grid;
+    place-content: center;
+    letter-spacing: 2.88px;
+  } */
+  
+  .active {
+    color: #6496DC;
+  }
+  
+  .ba_label{
+    font-size: 16px;
+  }
+
+/*---------------------------------
+    Banner / バナー
+----------------------------------*/
+
 .flow_calltoaction{
     background-image: url(./images/flow_cta_bg.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     /* background-position: bottom; */
     position: relative;
+    padding-left: 13.6vw;
+    margin-top: 200px;
 }
 
 .flow_calltoaction_content{
-    max-width: 1100px;
+    /* max-width: 1100px; */
     margin: 0 auto;
     padding: 8% 0 6%;
     display: flex;
@@ -612,7 +838,8 @@ button.gradient-btn {
 .flow_calltoaction_content h3{
     display: inline-block;
     background-color: #fff;
-    font-size: min(2.71vw, 41px);
+    /* font-size: min(2.71vw, 41px); */
+    font-size: 2.71vw;
     line-height: 1;
     letter-spacing: 0.08rem;
     /* margin-top: 60px; */
@@ -625,7 +852,8 @@ button.gradient-btn {
 
 .flow_calltoaction_content p{
     /* font-size: 16px; */
-    font-size: min(1.06vw, 16px);
+    /* font-size: min(1.06vw, 16px); */
+    font-size: 1.06vw;
     line-height: 2.2em;
     letter-spacing: 0.05rem;
     margin-top: 1.99vw;
@@ -647,9 +875,11 @@ button.gradient-btn {
     応募ボタン
 ----------------------------*/
 .flow_calltoaction_content button{
-    width: 370px;
+    /* width: 370px; */
+    width: 24.5vw;
     border-radius: 35px;    
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 1.32vw;
     line-height: 60px;
     letter-spacing: 0.11rem;
     position: relative;
@@ -670,15 +900,22 @@ button.gradient-btn {
 /*---------------------------------
     Tablet / タブレット
 ----------------------------------*/
-@media screen and (max-width:1100px){
+@media screen and (max-width:1500px){
     .flow_calltoaction_content{
-        padding-right: 50px;
-        padding-left: 50px;
+        padding-top: 7.5%
     }
+}
 
+@media screen and (max-width:1300px){
+    .flow_calltoaction_content{
+        padding-top: 7%
+    }
+}
+
+@media screen and (max-width:1100px){
     .flow_calltoaction_content button{
-        width: 296px;
-        font-size: 16px;
+        /* width: 296px; */
+        /* font-size: 16px; */
         line-height: 48px;
     }
 }
@@ -783,7 +1020,7 @@ header button{
 
 .interview_item{
     display: flex;
-    align-items: end;
+    /* align-items: end; */
     column-gap: 60px;
     margin-top: 75px;
 }
@@ -817,7 +1054,7 @@ header button{
     margin-top: 25px;
     background-color: #fff;
     border-radius:20px;
-    padding: 25px 20px;
+    padding: 30px 20px;
 }
 
 .interview_item_text_qa:nth-child(3){
@@ -826,7 +1063,7 @@ header button{
 
 .interview_item_text_qa h4{
     font-size: 20px;
-    line-height: 1;
+    line-height: 1.5;
     letter-spacing: 0.08rem;
 }
 
@@ -850,13 +1087,9 @@ header button{
 /*---------------------------------
     Tablet / タブレット
 ----------------------------------*/
-@media screen and (max-width:1100px){
+@media screen and (max-width:1300px){
     #interview{
-        grid-template-columns: 1fr 90% 1fr;
-    }
-
-    .interview_item img{
-        height: 100%;
+        grid-template-columns: 8vw 1fr 8vw;
     }
 }
 /*!********************************************************************************!*\
@@ -1006,7 +1239,7 @@ header button{
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/assets/css/point.css ***!
   \****************************************************************************/
 #point{
-    padding: 140px 0;
+    padding: 140px 8vw 150px;
     background-color: #EBF5FF;
     background-image: url(./images/slash_01.svg);
     background-repeat: no-repeat;
@@ -1035,6 +1268,7 @@ header button{
 
 .point_item img{
     width: 51%;
+    height: 100%;
     border-radius: 20px;
     object-fit: cover;
 }
@@ -1042,9 +1276,9 @@ header button{
 .point_item_text{
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: start;
     align-items: start;
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
 }
 
 .point_item span{
@@ -1072,7 +1306,7 @@ header button{
 /*---------------------------------
     Tablet / タブレット
 ----------------------------------*/
-@media screen and (max-width:1100px){
+@media screen and (max-width:1250px){
     .point_content{
         max-width: 100%;
         padding: 0 50px;
@@ -1083,7 +1317,7 @@ header button{
     }
 
     .point_item h3{
-        font-size: 24px;
+        font-size: 22px;
     }
 }
 /*!********************************************************************************!*\
@@ -1102,7 +1336,7 @@ header button{
     display: grid;
     grid-template-columns: 1fr 1100px 1fr;
     place-content: center;
-    padding-top: 150px;
+    padding: 150px 0 0 0;
     position: relative;;
 }
 
@@ -1150,7 +1384,7 @@ header button{
 
 .precedent_top{
     display: flex;
-    /* column-gap: 80px; */
+    column-gap: 80px;
     justify-content: space-between;
     align-items: end;
 }
@@ -1161,6 +1395,7 @@ header button{
 }
 
 .precedent_top_text{
+    width: 100%;
     padding-bottom: 10px;
 }
 
@@ -1180,6 +1415,7 @@ header button{
     margin-top: 120px;
     padding: 0 40px;
     max-width: 100%;
+    column-gap: 80px;
 }
 
 .precedent_bottom_item{
@@ -1190,7 +1426,9 @@ header button{
 }
 
 .precedent_bottom_item img{
-    max-width: 265px;
+    /* max-width: 265px; */
+    width: 100%;
+    padding: 0 10px;
 }
 
 .precedent_bottom_item h3{
@@ -1206,15 +1444,18 @@ header button{
 }
 
 .precedent_bottom_item .salary{
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: min(1.32vw, 20px);
     margin-top: 25px;
     /* padding: 0 1.1em; */
-    width: 286px;
+    /* width: 286px; */
+    width: 100%;
     text-align: center;
 }
 
 .precedent_bottom_item .price{
     font-size: 40px;
+    font-size: min(2.65vw, 40px);
     font-style: italic;
     padding: 0 0.1em;
 }
@@ -1241,9 +1482,9 @@ header button{
 /*---------------------------------
     Tablet / タブレット
 ----------------------------------*/
-@media screen and (max-width:1100px){
+@media screen and (max-width:1300px){
     #precedent{
-        grid-template-columns: 1fr 90% 1fr;
+        grid-template-columns: 8vw 1fr 8vw;
     }
 
     .precedent_top p{
@@ -1252,22 +1493,27 @@ header button{
     }
 
     .precedent_bottom{
+        column-gap: 40px;
         padding: 0;
     }
 }
 
-@media screen and (max-width:1000px){
+@media screen and (max-width:1100px){
+    .precedent_top{
+        column-gap: 40px;
+    }
+
     .precedent_bottom_item img{
-        max-width: 212px;
+        /* max-width: 212px; */
     }
 
     .precedent_bottom_item .salary{
-        font-size: 16px;
-        width: 220px;
+        /* font-size: 16px; */
+        /* width: 220px; */
     }
 
     .precedent_bottom_item .price{
-        font-size: 32px;
+        /* font-size: 32px; */
     }
 }
 /*!******************************************************************************!*\
@@ -1275,7 +1521,7 @@ header button{
   \******************************************************************************/
 #recruit{
     background-color: #fff;
-    padding: 120px 0;
+    padding: 120px 8vw;
 }
 
 .recruit_title{
