--- a/src/assets/css/keyvisual.css
+++ b/src/assets/css/keyvisual.css
@@ -126,11 +126,15 @@
     box-shadow: 3px 3px 5px rgba(131, 151, 198, .6);
 }
 
-#keyvisual button img{
+#keyvisual button svg{
     width: 13px;
     height: 20px;
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
     right: 30px;
+}
+
+#keyvisual button:hover svg .cls-1{
+    fill: #30508D;
 }
