--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -22,7 +22,9 @@ header button{
 }
 
 header button:hover{
-  border: solid 1px #30508D;
+  /* border: solid 1px #30508D; */
+  outline: solid 1px #30508D;
+  outline-offset: 0px;
 }
 
 /*---------------------------------
